code clean up, imports update